# openfisca-aotearoa

./: .ahoy.yml  .editorconfig  .flake8  .gitattributes  .gitignore  .lagoon.yml  .python-version  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SETUP-devcontainer.md  SETUP-docker.md  SETUP-pew.md  SETUP-pyenv.md  dev-docker-compose.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  has-functional-changes.sh  is-version-number-acceptable.sh  lint-files.sh  publish-git-tag.sh  test-api.sh
.github/workflows/: build.yml  deploy.yml  python.yaml  validate.yml
docs/: devcontainer.md  docker.md  pew.md  pyenv.md
openfisca_aotearoa/: __init__.py  aotearoa_legislationmodel.py  entities.py  structure.json
openfisca_aotearoa/api_examples/: README.md  entities.http  parameters.http  variables.http
openfisca_aotearoa/conf/: cache_blacklist.py
openfisca_aotearoa/parameters/disability_allowance/: income_limits.yaml  max_age_for_income_limit.yaml  max_weekly_benefit.yaml  min_age_for_income_limit.yaml
openfisca_aotearoa/parameters/jobseeker_support/: income_test_1.yaml  income_test_1_b.yaml  net_weekly_benefit.yml
openfisca_aotearoa/parameters/social_security/: income_test_1.yaml  income_test_1.yml  income_test_2.yaml  income_test_2.yml  income_test_3.yml  income_test_3a.yml  income_test_3b.yaml  income_test_3b.yml  income_test_4.yaml  income_test_4.yml
openfisca_aotearoa/parameters/social_security/accommodation_supplement/: accommodation_costs.yaml  age_threshold.yaml  area.csv  assets.yaml  board_lodger_percent.yaml  cutout.yaml  rebate.yaml
openfisca_aotearoa/parameters/social_security/child_disability_allowance/: base.yaml
openfisca_aotearoa/parameters/social_security/childcare_assistance/: rates_onechild.yaml  rates_threepluschildren.yaml  rates_twochildren.yaml
openfisca_aotearoa/parameters/social_security/childcare_subsidy/: hours_payable_caregiver_approved_activity.yaml
openfisca_aotearoa/parameters/social_security/dictionary/: income_test_1.yaml  income_test_2.yaml  income_test_3b.yaml  income_test_4.yaml
openfisca_aotearoa/parameters/social_security/disability_allowance/: base.yaml
openfisca_aotearoa/parameters/social_security/jobseeker_support/: base.yaml  base.yml
openfisca_aotearoa/parameters/social_security/schedule_5/: asset_limits_1.yml  asset_limits_2.yml  asset_limits_3.yml  asset_limits_4.yml  income_limits_5.yml  income_limits_6.yml  income_limits_7.yml  income_limits_8.yml  income_limits_9.yml
openfisca_aotearoa/parameters/social_security/sole_parent_support/: age_threshold.yml  base.yml  child_age_threshold.yml  childcare_deduction_limit.yml
openfisca_aotearoa/parameters/social_security/supported_living_payment/: base.yaml
openfisca_aotearoa/situation_examples/: __init__.py  child_disability_allowance.json
openfisca_aotearoa/tests/: test_api.py
openfisca_aotearoa/tests/acc/: acc_LOPE.yaml
openfisca_aotearoa/tests/citizenship/: citizenship_leap_days.yaml  citizenship_more.txt  citizenship_more.yaml  citizenship_presence.txt  citizenship_presence.yaml
openfisca_aotearoa/tests/demographics/: age.yaml  housing_costs.yaml  relationships.yaml  work.yaml
openfisca_aotearoa/tests/exegesis/: housing_costs.yaml  occupant.yaml
openfisca_aotearoa/tests/immigration/: citizen_resident.yaml  indefinite_stay_enter_and_leave.yaml  indefinite_stay_present_not_entitled.yaml  residence_for_benefits.yaml
openfisca_aotearoa/tests/income_tax/family_scheme/: best_start.yaml  eligibility.yaml  family_scheme.yaml  family_tax_credit.yaml  in_work_tax_credit.yaml  minimum_family_tax_credit.yaml
openfisca_aotearoa/tests/parental_leave/: parental_leave.yaml  partners.yaml  transferring_entitlement.yaml
openfisca_aotearoa/tests/relationships/: relationship.yaml
openfisca_aotearoa/tests/residential_tenancies/interpretation/: bond.yaml  rent.yaml  tenant.yaml
openfisca_aotearoa/tests/rta/interpretation/: bond.yaml  rent.yaml  residential_premise.yaml  tenancy.yaml  tenant.yaml
openfisca_aotearoa/tests/social_security/: _benefit_me.yaml  accommodation_supplement.yaml  child.yaml  child_disability_allowance.yaml  childcare_subsidy.yaml  community_services_card.yaml  continuously_resided.yaml  continuously_resided_at_any_one_time.yaml  home_help.yaml  jobseeker_support.yaml  main_benefits.yaml  ordinarily_resident.yaml  orphans.yaml  permanent_place_of_residence.yaml  residence_for_benefits.yaml  residential_requirement.yaml  sole_parent_support.yaml  super.yaml  supported_living_payment.yaml  unsupported_child.yaml  young_parent_payment.yaml
openfisca_aotearoa/tests/social_security/accommodation_supplement/: accommodation_supplement__cutoff.yaml  accommodation_supplement__cutout.yaml  accommodation_supplement__gross.yaml  accommodation_supplement__rebate.yaml  area.yaml  assets.yaml  base.yaml  beneficiary.yaml  cutout.yaml  rate.yaml  rebate.yaml  reduction.yaml  situation.yaml
openfisca_aotearoa/tests/student_allowance/: basic_grant.yaml
openfisca_aotearoa/variables/demographics/: ages.py  dependants.py  education.py  health.py  housing.py  income.py  relationships.py  residence.py  work.py
openfisca_aotearoa/variables/exegesis/: housing_costs.py  income_tested_benefit.py  occupant.py  occupation_lawfulness.py  occupation_purpose.py  occupation_type.py
openfisca_aotearoa/variables/legislation/: jobseeker_support.py
openfisca_aotearoa/variables/other/: home_help.py
(+217 files in other folders)
