[tool.poetry]
name = "OpenFisca-Aotearoa"
version = "20.0.3"
description = "OpenFisca rules-as-code system for Aotearoa."
license = "AGPL-3.0-only"
authors = [
    "Asghar Hussain Kazi <https://github.com/asgharkazi>",
    "Brenda Wallace <https://github.com/Br3nda>",
    "Hamish Fraser <https://github.com/verbman>",
    "Jonah Duckles <https://github.com/jduckles>",
    "Mauko Quiroga Alvarado <https://mauko.me>",
    "Pia Andrews <https://github.com/piacandrews>",
]
maintainers = [
    "Asghar Hussain Kazi <https://github.com/asgharkazi>",
    "Brenda Wallace <https://github.com/Br3nda>",
    "Hamish Fraser <https://github.com/verbman>",
    "Jonah Duckles <https://github.com/jduckles>",
    "Mauko Quiroga Alvarado <https://mauko.me>",
    "Pia Andrews <https://github.com/piacandrews>",
    ]
readme = "README.md"
homepage = "https://benefitme.nz"
repository = "https://github.com/digitalaotearoa/openfisca-aotearoa"
documentation = "https://openfisca.org/doc"
keywords = ["microsimulation", "tax", "benefit", "rac", "rules-as-code"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Information Analysis",
    ]
include = [
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "LICENSE.AGPL.txt",
    "README.md",
    "openfisca_aotearoa/**/*",
    ]
packages = [{include = "openfisca_aotearoa", from = "."}]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "~1.5"
openfisca-core = {git = "https://github.com/openfisca/openfisca-core.git", branch = "add-weeks", extras = ["web-api"]}

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.5.0"
flake8 = "^4.0.0"
flake8-bugbear = "^22.10.0"
flake8-builtins = "^2.0.0"
flake8-coding = "^1.3.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-print = "^5.0.0"
flake8-rst-docstrings = "^0.2.0"
flake8-simplify = "^0.19.0"
flake8-use-fstring = "^1.4.0"
importlib-metadata = {version = "<4.13.0", python = "~3.7"}
isort = "^5.11.3"
mypy = "^0.990"
pycodestyle = "^2.7.0"
pylint = "^2.15.0"
pylint-pytest = "^1.1.2"
pyupgrade = "^2.32.0"
types-urllib3 = "^1.26.25.4"
yamllint = "^1.28.0"

[build-system]
requires = ["poetry-core >= 1.2.0"]
build-backend = "poetry.core.masonry.api"
